
2017-11-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h, coblocal.h, call.c: added (cob_init_nomain) to start
	  runtime initialization without setting the main handle (saves time on
	  each function lookup)
	* call.c [COB_BORKED_DLOPEN]: no processing of mainhandle

2017-11-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h, coblocal.h: added COB_SET_DEBUG as cob_debugging_mode
	  in local settings / global pointer
	* common.c, coblocal.h: added internal configuration status option ENV_RESETS
	  for "needs additional code on change"
	* common.c: added ENV_RESETS to COB_SET_DEBUG changing the externalized value
	  in cobglobtr when setting changes during runtime

2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: suppress C statement not reached warnings for Solaris C,
	  see bug #456

2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* fileio.c: fixed bug #457 explicit check for error after all put/write
	  calls (calls to put were completely unchecked before) and raise correct
	  fileio status (especially 34 for disk/quota full) instead of status 30

2017-10-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: changed message format back to old version, see bug #455

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_fork): bug #451 reset cob_process_id after fork
	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
	  user-specified CPPFLAGS to override own includes, see bug #452
	* common.c, common.h: minimal support for DJGGP,
	  including generation of 8.3 filenames

2017-10-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_ref_mod): bug #446 splitted checks for length and
	  combination of offset and length
	* common.c (cob_external_addr): bug #445 added supressible warning for