@@ -1,4 +1,9 @@
 
+2017-12-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c (cob_sys_system) [_WIN32]: FR #153 workaround for CALL 'SYSTEM'
+	  on buggy Woe32 which removes first and last quote from command
+
 2017-11-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c, common.h, coblocal.h, call.c: added (cob_init_nomain) to start
